--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
     <div class="container">
         <a class="navbar-brand" href="index.html">PRUFER</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
+                aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="oi oi-menu"></span> Menu
         </button>
 
@@ -114,11 +115,20 @@
                     </div>
                 </div>
                 <div class="pb-md-5">
-                    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Examinations are crucial in educational institutions. An automated system aims to evaluate students' subjective answers and allocate marks automatically. This system benefits universities, schools, and colleges by streamlining the Assessment process, thus saving time and effort for faculty and staff.</p>
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Examinations
+                        are crucial in educational institutions. An automated system aims to evaluate students'
+                        subjective answers and allocate marks automatically. This system benefits universities, schools,
+                        and colleges by streamlining the Assessment process, thus saving time and effort for faculty and
+                        staff.</p>
                     <p>
-                        This project focuses on automating the exam Assessment process. Answer papers are scanned, and machine learning techniques are used for handwriting recognition, converting student answers into standard text. Summarization techniques are then applied to create a concise summary of the document's main points.</p>
+                        This project focuses on automating the exam Assessment process. Answer papers are scanned, and
+                        machine learning techniques are used for handwriting recognition, converting student answers
+                        into standard text. Summarization techniques are then applied to create a concise summary of the
+                        document's main points.</p>
                     <p>
-                        The system requires administrators to input key answers. Summarized answers are then evaluated automatically based on these key answers. Marks are awarded as a percentage, contributing to overall results calculation.</p>
+                        The system requires administrators to input key answers. Summarized answers are then evaluated
+                        automatically based on these key answers. Marks are awarded as a percentage, contributing to
+                        overall results calculation.</p>
 
                     <ul class="ftco-social d-flex">
                         <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
@@ -281,9 +291,12 @@
                     <h2 class="ftco-heading-2">Have a Question?</h2>
                     <div class="block-23 mb-3">
                         <ul>
-                            <li><span class="icon icon-map-marker"></span><span class="text"> Pune, Maharashtra, INDIA</span></li>
-                            <li><a href="tel:+919726297264"><span class="icon icon-phone"></span><span class="text">+91 97262 97264</span></a></li>
-                            <li><a href="mailto:mananbhimjiyani@gmail.com"><span class="icon icon-envelope"></span><span class="text">mananbhimjiyani@gmail.com</span></a></li>
+                            <li><span class="icon icon-map-marker"></span><span
+                                    class="text"> Pune, Maharashtra, INDIA</span></li>
+                            <li><a href="tel:+919726297264"><span class="icon icon-phone"></span><span class="text">+91 97262 97264</span></a>
+                            </li>
+                            <li><a href="mailto:mananbhimjiyani@gmail.com"><span class="icon icon-envelope"></span><span
+                                    class="text">mananbhimjiyani@gmail.com</span></a></li>
                         </ul>
                     </div>
                 </div>
